[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/components/rooms/scripts/Room.gd" type="Script" id=1]
[ext_resource path="res://scenes/components/weapon/Weapon.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/components/rooms/audios/electric-screwdriver.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/components/walls/destructable/DestructableWall.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/components/rooms/enemies/EnemySpawn.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/components/walls/stone/StoneWall.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/components/weapon_turn/WeaponTurn.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/components/rooms/common/spawn_point/SpawnPoint.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 512 )

[node name="RoomSquare" type="Area2D"]
collision_layer = 0
collision_mask = 9
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Переворачивать нельзя!"
}

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 448, 448 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Walls" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="WallsDestructable" type="Node2D" parent="Walls"]
__meta__ = {
"_edit_lock_": true
}

[node name="WallDestructable2" parent="Walls/WallsDestructable" instance=ExtResource( 4 )]
position = Vector2( 186, 712 )
_color_index = 2

[node name="WallDestructable3" parent="Walls/WallsDestructable" instance=ExtResource( 4 )]
position = Vector2( 384, 560 )
_color_index = 2

[node name="WallDestructable14" parent="Walls/WallsDestructable" instance=ExtResource( 4 )]
position = Vector2( 250, 856 )
rotation = 1.5708

[node name="WallDestructable15" parent="Walls/WallsDestructable" instance=ExtResource( 4 )]
position = Vector2( 250, 728 )
rotation = 1.5708
_color_index = 3

[node name="WallDestructable4" parent="Walls/WallsDestructable" instance=ExtResource( 4 )]
position = Vector2( 0, 176 )
_color_index = 3

[node name="WallDestructable5" parent="Walls/WallsDestructable" instance=ExtResource( 4 )]
position = Vector2( 128, 448 )
_color_index = 1

[node name="WallDestructable9" parent="Walls/WallsDestructable" instance=ExtResource( 4 )]
position = Vector2( -112, 48 )
rotation = 1.5708
_color_index = 1

[node name="WallDestructable17" parent="Walls/WallsDestructable" instance=ExtResource( 4 )]
position = Vector2( -112, -64 )
rotation = 1.5708
scale = Vector2( 0.76, 1 )
_color_index = 2

[node name="WallDestructable11" parent="Walls/WallsDestructable" instance=ExtResource( 4 )]
position = Vector2( 528, 72 )
rotation = 1.5708
_color_index = 2

[node name="WallDestructable12" parent="Walls/WallsDestructable" instance=ExtResource( 4 )]
position = Vector2( 528, 200 )
rotation = 1.5708
_color_index = 2

[node name="WallDestructable13" parent="Walls/WallsDestructable" instance=ExtResource( 4 )]
position = Vector2( 640, 264 )
_color_index = 3

[node name="WallDestructable6" parent="Walls/WallsDestructable" instance=ExtResource( 4 )]
position = Vector2( 64, 336 )
rotation = 1.5708
_color_index = 3

[node name="WallDestructable8" parent="Walls/WallsDestructable" instance=ExtResource( 4 )]
position = Vector2( 144, 0 )
rotation = 1.5708

[node name="WallDestructable10" parent="Walls/WallsDestructable" instance=ExtResource( 4 )]
position = Vector2( 960, 848 )
rotation = 1.5708
_color_index = 1

[node name="WallDestructable16" parent="Walls/WallsDestructable" instance=ExtResource( 4 )]
position = Vector2( 960, 960 )
rotation = 1.5708
scale = Vector2( 0.75, 1 )
_color_index = 1

[node name="WallDestructable7" parent="Walls/WallsDestructable" instance=ExtResource( 4 )]
position = Vector2( 512, 560 )
_color_index = 1

[node name="WallDestructable18" parent="Walls/WallsDestructable" instance=ExtResource( 4 )]
position = Vector2( 896, 752 )
_color_index = 1

[node name="WallDestructable21" parent="Walls/WallsDestructable" instance=ExtResource( 4 )]
position = Vector2( 792, 560 )
_color_index = 1

[node name="WallDestructable20" parent="Walls/WallsDestructable" instance=ExtResource( 4 )]
position = Vector2( 656, 768 )
rotation = 1.5708
_color_index = 1

[node name="WallDestructable19" parent="Walls/WallsDestructable" instance=ExtResource( 4 )]
position = Vector2( 656, 896 )
rotation = 1.5708
_color_index = 2

[node name="WallsStone" type="Node2D" parent="Walls"]
__meta__ = {
"_edit_lock_": true
}

[node name="WallStone1" parent="Walls/WallsStone" instance=ExtResource( 6 )]
position = Vector2( 64, -64 )

[node name="WallStone2" parent="Walls/WallsStone" instance=ExtResource( 6 )]
position = Vector2( 320, -64 )

[node name="WallStone3" parent="Walls/WallsStone" instance=ExtResource( 6 )]
position = Vector2( 576, -64 )

[node name="WallStone4" parent="Walls/WallsStone" instance=ExtResource( 6 )]
position = Vector2( 832, -64 )

[node name="WallStone5" parent="Walls/WallsStone" instance=ExtResource( 6 )]
position = Vector2( 960, 16 )
rotation = 1.5708

[node name="WallStone6" parent="Walls/WallsStone" instance=ExtResource( 6 )]
position = Vector2( 960, 272 )
rotation = 1.5708

[node name="WallStone7" parent="Walls/WallsStone" instance=ExtResource( 6 )]
position = Vector2( 960, 528 )
rotation = 1.5708

[node name="WallStone8" parent="Walls/WallsStone" instance=ExtResource( 6 )]
position = Vector2( 960, 656 )
rotation = 1.5708

[node name="WallStone11" parent="Walls/WallsStone" instance=ExtResource( 6 )]
position = Vector2( 832, 1008 )

[node name="WallStone12" parent="Walls/WallsStone" instance=ExtResource( 6 )]
position = Vector2( 576, 1008 )

[node name="WallStone13" parent="Walls/WallsStone" instance=ExtResource( 6 )]
position = Vector2( 320, 1008 )

[node name="WallStone15" parent="Walls/WallsStone" instance=ExtResource( 6 )]
position = Vector2( -112, 880 )
rotation = 1.5708

[node name="WallStone16" parent="Walls/WallsStone" instance=ExtResource( 6 )]
position = Vector2( -112, 752 )
rotation = 1.5708

[node name="WallStone17" parent="Walls/WallsStone" instance=ExtResource( 6 )]
position = Vector2( -112, 496 )
rotation = 1.5708

[node name="WallStone18" parent="Walls/WallsStone" instance=ExtResource( 6 )]
position = Vector2( -112, 240 )
rotation = 1.5708

[node name="WallStone14" parent="Walls/WallsStone" instance=ExtResource( 6 )]
position = Vector2( 64, 1008 )

[node name="WeaponsTurn" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="WeaponTurn1" parent="WeaponsTurn" instance=ExtResource( 7 )]
position = Vector2( 440, 424 )

[node name="Weapons" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Weapon1" parent="Weapons" instance=ExtResource( 2 )]
position = Vector2( 688, 116 )

[node name="Weapon2" parent="Weapons" instance=ExtResource( 2 )]
position = Vector2( 136, 832 )

[node name="EnemySpawn" parent="." instance=ExtResource( 5 )]

[node name="SpawnPoint2" parent="EnemySpawn" instance=ExtResource( 8 )]
position = Vector2( 800, 352 )

[node name="SpawnPoint5" parent="EnemySpawn" instance=ExtResource( 8 )]
position = Vector2( 224, 160 )

[node name="SpawnPoint4" parent="EnemySpawn" instance=ExtResource( 8 )]
position = Vector2( 544, 864 )

[node name="SpawnPoint3" parent="EnemySpawn" instance=ExtResource( 8 )]
position = Vector2( 96, 608 )

[node name="Enemies" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="FogOfWar" type="Polygon2D" parent="."]
visible = false
z_index = 1
color = Color( 0.0666667, 0.0666667, 0.0666667, 0.784314 )
polygon = PoolVector2Array( -64, -64, 960, -64, 960, 960, -64, 960 )
__meta__ = {
"_edit_lock_": true
}

[node name="CreateEnemies" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
pitch_scale = 2.0

[connection signal="area_entered" from="." to="." method="_on_Room_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Room_area_exited"]
[connection signal="rotate_right" from="WeaponsTurn/WeaponTurn1" to="." method="_on_WeaponTurn_rotate_right"]
